Slideshow size bug correction small padding correct un highlighted region new block names using block_class module

--- a/docroot/sites/all/themes/warmshowers_zen/sass/components/pages/_anon_homepage.scss
+++ b/docroot/sites/all/themes/warmshowers_zen/sass/components/pages/_anon_homepage.scss
@@ -53,7 +53,7 @@
     font-size: 19px;
     line-height: 21px;
     //-webkit-font-smoothing: antialiased;
-    padding: 0 25px;
+    padding: 4px 25px 0;
 
     strong {
       color: $text-color;
@@ -99,11 +99,12 @@
   }
 
   /* Mobile apps links */
-  #block-nodeblock-15521 {
+  .region-highlighted .block-mobileapps {
+
     @include zen-grid-item(3, 10);
 
     p {
-      margin-top: 0;
+      margin-top: 0;  
       margin-bottom: 8px;
     }
 
@@ -189,68 +190,71 @@
 
     // 'How does it works'
 
-    ol {
-      padding: 0;
-      font-weight: normal;
-      position: relative;
+    .block-howitworks {
 
-      li {
-        display: inline-block;
-        width: 20%;
-        text-align: center;
+      ol {
+        padding: 0;
+        font-weight: normal;
+        position: relative;
 
-        vertical-align: middle;
-        padding: 0 20px;
+        li {
+          display: inline-block;
+          width: 20%;
+          text-align: center;
 
-        &:before {
-          content: "";
-          background: url(../img/anonhome_howitworks.png);
-          width: 144px;
-          height: 120px;
-          display: block;
-          float: center;
-          position: relative;
-          left: 50%;
-          margin-left: -67px;
-          margin-bottom: 20px;
-        }
+          vertical-align: middle;
+          padding: 0 20px;
 
-        &:nth-child(2):before {
-          background-position: -144px 0;
-        }
-        &:nth-child(3):before {
-          background-position: -288px 0;
-        }
-        &:nth-child(4):before {
-          background-position: -432px 0;
-        }
+          &:before {
+            content: "";
+            background: url(../img/anonhome_howitworks.png);
+            width: 144px;
+            height: 120px;
+            display: block;
+            float: center;
+            position: relative;
+            left: 50%;
+            margin-left: -67px;
+            margin-bottom: 20px;
+          }
 
-        &:after {
-          content: "";
-          display: block;
-          width: 18px;
-          height: 23px;
-          background: url(../img/list_separator_arrow.png);
-          position: absolute;
-          top: 50px;
-          margin-left: -30px;
-          opacity: .5;
-          //margin-bottom: 10px;
-        }
+          &:nth-child(2):before {
+            background-position: -144px 0;
+          }
+          &:nth-child(3):before {
+            background-position: -288px 0;
+          }
+          &:nth-child(4):before {
+            background-position: -432px 0;
+          }
 
-        &:first-child {
           &:after {
-            display: none;
+            content: "";
+            display: block;
+            width: 18px;
+            height: 23px;
+            background: url(../img/list_separator_arrow.png);
+            position: absolute;
+            top: 50px;
+            margin-left: -30px;
+            opacity: .5;
+            //margin-bottom: 10px;
+          }
+
+          &:first-child {
+            &:after {
+              display: none;
+            }
           }
         }
       }
-    }
 
-    p {
-      text-align: right;
+      p {
+        text-align: right;
 
-      a {
-        color: lighten($light-blue, 20%);
+        a {
+          color: lighten($light-blue, 20%);
+        }
       }
     }
   }
@@ -259,8 +263,9 @@
     position: absolute;
     top: -468px;
     left: 0;
+    width: 940px;
 
-    div.field-content,
+    div.content,
     img {
       height: 448px;
     }
